Fixed spacing

--- a/src/components/BusinessCaseReview/index.scss
+++ b/src/components/BusinessCaseReview/index.scss
@@ -4,3 +4,7 @@
   max-width: 75rem;
   padding-right: 2rem;
 }
+
+.request-information-wrapper {
+  padding-bottom: 1.75rem;
+}
